ansible/roles/kubernetes_dashboard/files/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
          scheme: https
          serversTransport: dashboard-transport
